# skywalker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.skywalker/agents/: customer_data_agent.yml  knowledge_base_agent.yml
config/: skywalker.json
db/support_db/: init_db.py  schema.sql  support.db
src/modules/: __init__.py
src/modules/agents/: __init__.py  agent_executor.py  agent_factory.py  agent_manager.py  agent_registry.py  guardrail_manager.py  loader.py  schemas.py
src/modules/agents/context_manager/: guardrail_prompts.py  prompts.py
src/modules/api/: __init__.py  main.py  schemas.py
src/modules/core/: __init__.py  config.py  context.py  session.py  system_prompt.py  workspace.py
src/modules/knowledge_bases/: __init__.py  chunker.py  router.py  schemas.py  scraper.py  service.py  vector_store.py
src/modules/tools/: __init__.py  edit.py  enums.py  find.py  grep.py  rag_search.py  read.py  registry.py  schema.py  support_db.py  tool_factory.py  web_search.py  write.py
src/modules/tools/utils/: binary_manager.py  edit_diff.py  image_utils.py  operations.py  path_utils.py  truncate.py
tests/: main_inspection.py  test_customer_incidents.py
tests/agent_session/: run_agent_session_tests.py  test_agent_manager_main_loop.py  test_cases.json  test_rag_search_live.py  test_support_db_tools_live.py  test_web_search_live.py
tests/agent_session/results/: 01_base_agent_native_tools.md  02_customer_data_active_incidents.md  03_knowledge_agent_compare_stone_vs_infinitepay.md
(+10 files in other folders)
