[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skywalker"
version = "0.1.0"
description = "Skywalker Customer Support Agent System"
authors = [
    {name = "Farrulla", email = "farrullatech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-ai>=0.0.14",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langfuse>=2.0.0",
    "docker>=7.0.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "tiktoken>=0.7.0",
    "slack-sdk>=3.33.0",
    "google-generativeai>=0.8.0",
    "pinecone>=5.0.0",
    "crawl4ai>=0.4.0",
    "pyyaml>=6.0.0",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ddgs (>=9.10.0,<10.0.0)",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
